# Upmixing-Android-Audio

./: .gitignore  README.md  settings.gradle.kts  upmix.conf  virtualsurround.conf
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/androidsurround/: AndroidSurroundApp.kt  MainActivity.kt
app/src/main/java/com/androidsurround/audio/: AudioEngine.kt  DeviceManager.kt  MultiSinkManager.kt  NativeEngine.kt  UpmixProcessor.kt
app/src/main/java/com/androidsurround/model/: AudioDevice.kt  ChannelLayout.kt  Playlist.kt  UpmixConfig.kt
app/src/main/java/com/androidsurround/playback/: MediaPlayerManager.kt  MediaThumbnailExtractor.kt  PcmDecoder.kt  PipelineAudioSink.kt  PlaylistManager.kt
app/src/main/java/com/androidsurround/root/: RootShell.kt
app/src/main/java/com/androidsurround/ui/: BrowserSheet.kt  ChannelConfigDialog.kt  DeviceMappingDialog.kt  DeviceSelectorSheet.kt  FullscreenVideoPlayer.kt  MainScreen.kt  MediaPlayerBar.kt  PlaylistSheet.kt  UpmixSettingsDialog.kt
app/src/main/java/com/androidsurround/ui/theme/: Color.kt  Theme.kt
app/src/main/native/: CMakeLists.txt  upmix_dsp.cpp
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
